--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "slime",
+  "name": "SlimeTack",
   "version": "0.1.0",
+  "main": "public/electron.js",
   "private": true,
   "dependencies": {
+    "@abandonware/noble": "^1.9.2-24",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -10,14 +12,20 @@
     "@types/node": "^16.18.80",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "cors": "^2.8.5",
+    "osc": "^2.4.4",
+    "quaternion": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "three": "^0.161.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "react-start": "react-scripts start",
+    "electron-start": "electron .",
+    "start": "concurrently \"BROWSER=none npm run react-start\" \"wait-on http://localhost:3000 && npm run electron-start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.161.2",
+    "@types/web-bluetooth": "^0.0.20",
+    "concurrently": "^8.2.2",
+    "wait-on": "^7.2.0"
   }
 }
