--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "SlimeTack",
+  "name": "haritorax-slimevr-addon",
   "version": "0.1.0",
   "main": "public/electron.js",
   "private": true,
   "dependencies": {
     "@abandonware/noble": "^1.9.2-24",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,10 +16,12 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "cors": "^2.8.5",
+    "framer-motion": "^11.0.6",
     "osc": "^2.4.4",
     "quaternion": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "three": "^0.161.0",
     "typescript": "^4.9.5",
