--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,13 +17,16 @@
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "cors": "^2.8.5",
+    "electron": "^29.0.1",
     "framer-motion": "^11.0.6",
     "osc": "^2.4.4",
     "quaternion": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
+    "redux": "^5.0.1",
     "three": "^0.161.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
